# CVGen

./: .cvgen.yaml.example  .env.example  .gitignore  BUILD_MANIFEST.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_README.md  DEPLOYMENT_GUIDE.md  DESKTOP_BUILD.md  DESKTOP_SUMMARY.md  Dockerfile  Dockerfile.init  INDEX.md  LICENSE  PHASE2_IMPLEMENTATION.md  PHASE4_DOCKER_SETUP.md  PHASE5_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_PHASE5.md  START_HERE.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml  setup.bat  setup.sh
.github/workflows/: build-installers.yml  ci.yml  pages.yml  release.yml
data/qpanda3_docs/: README.md  api_reference.md  examples.md  patterns.md
desktop/: README.md  build-python.bat  build-python.sh  main.js  package.json  preload.js  splash.html
docs/: index.html
docs/css/: style.css
docs/js/: main.js
examples/: 01_hello_quantum.py  02_quantum_agent.py  03_hybrid_vqe.py
installer/windows/: installer.nsi
scripts/: health_check.sh  init_rag.py
src/cvgen/: __init__.py  cli.py  config.py  desktop_entry.py  launcher.py  standalone.py
src/cvgen/agents/: __init__.py  auto_agent.py  base.py  hybrid_agent.py  llm_quantum_agent.py  qaoa_agent.py  qml_agent.py  quantum_agent.py  tools.py
src/cvgen/api/: __init__.py  app.py  auth.py  middleware.py  models.py  websocket.py
src/cvgen/api/routes/: agents.py  backends.py  circuits.py  jobs.py  quantum_ask.py
src/cvgen/backends/: __init__.py  aws_braket.py  azure_quantum.py  base.py  ibm_cloud.py  origin_pilot.py  qiskit_backend.py  simulator.py
src/cvgen/bridge/: __init__.py  circuit_translator.py  job_protocol.py  telemetry.py  zmq_connection.py
src/cvgen/core/: __init__.py  circuit.py  gates.py  registry.py  types.py
src/cvgen/monitoring/: logger.py  metrics.py
src/cvgen/orchestrator/: __init__.py  fallback.py  optimizer.py  pipeline.py  retry.py  scheduler.py  validator.py  workflow.py
src/cvgen/rag/: __init__.py  indexer.py  retriever.py
src/cvgen/utils/: math.py
src/cvgen/web/: __init__.py
src/cvgen/web/static/: index.html  manifest.json  sw.js
src/cvgen/web/static/css/: style.css
src/cvgen/web/static/js/: api-client.js  app.js  chat.js  circuit-builder.js  dashboard.js  visualizer.js
tests/: conftest.py  test_agents.py  test_api.py  test_bridge.py  test_circuit.py  test_cli.py  test_config.py  test_integration.py  test_llm_agent.py  test_orchestrator.py  test_orchestrator_v2.py  test_simulator.py
tests/mocks/: origin_pilot_mock.py
