[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvgen"
version = "0.1.0"
description = "AI Agent Framework for Quantum Operating Systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "aigambitkg" },
]
keywords = ["quantum", "ai-agents", "quantum-computing", "origin-pilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cvgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
